getting-started/my-route.yaml
kind: List
items: 
- kind: Ingress
  apiVersion: route.openshift.io/v1
  metadata:
    name: my-route
  spec:
    to:
      kind: Service
      name: quarkus-development-server
      weight: 100
    port:
      targetPort: server-8443
    tls:
      termination: passthrough
    wildcardPolicy: None
