getting-started/quarkus-template4.yaml
---
kind: Template
apiVersion: v1
metadata:
  name: quarkus-app
objects:
-
  apiVersion: v1
  kind: Service
  metadata:
    name: quarkus
    labels:
      name: quarkus
  spec:
    type: LoadBalancer
    ports:
      - name: quarkushttp
        port: 8443
        targetPort: 8443
        protocol: TCP
-
  kind: Route
  apiVersion: route.openshift.io/v1
  metadata:
    name: quarkusdev
    annotations:
      testannotation: quarkus
  spec:
    to:
      kind: Service
      name: quarkusdev
      weight: 100
    port:
      targetPort: quarkus-http
    tls:
      termination: reencrypt
    wildcardPolicy: None
